--- a/README.Rmd
+++ b/README.Rmd
@@ -20,7 +20,7 @@ knitr::opts_chunk$set(
 
 The goal of AwesomePackage is to infer ancestry with some models and fit those models with some algorithms.
 
-We use the classical PSD model for ancestor inference, which has been widely used, such as ADMIXTURE, FRAPPE. We illustrate the close relationship between the PSD model, the Poisson NMF model and the multinomial topic model, which can optimize the algorithm. We use Expectation-Maximization algorithm (EM), co-ordinate descent algorithm (CD), sequential quadratic programming algorithm (SQP) and stochastic variational inference algorithm (SVI) to fit the model, and illustrate the differences between these algorithms through simulation experiments and real data experiments.
+We use the classical PSD model for ancestor inference, which has been widely used, such as STRUCTURE (Pritchard et al. 2000, MCMC), FRAPPE (Tang et al. 2005, EM), ADMIXTURE (Alexander et al. 2009, SQP), fastSTRUCTURE (Raj et al. 2014, VI), TeraStructure (Gopalan et al. 2017, SVI). We illustrate the close relationship between the PSD model, the Poisson NMF model, the multinomial topic model and the LDA model, which can optimize the algorithm. We use Expectation-Maximization algorithm (EM), sequential quadratic programming algorithm (SQP), variational inference algorithm (VI) and stochastic variational inference algorithm (SVI) to fit the model, then illustrate the relationships and differences between these algorithms through simulation experiments and real data experiments.
 
 ## Installation
 
